--- a/results.yaml
+++ b/results.yaml
@@ -5,6 +5,23 @@ results:
     resin_os_version: 2.12.7+rev1.prod
     body: |-
       # Tests 
+       - ✔ Cellular modem connection
+
+
+      # Summary
+      - planned: 1
+      - pass: 1
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-5-31
+    PS_UUID: 84ef6b40-64c8-11e8-9011-2d8b42cbecae
+  - provision_time: null
+    image_size: null
+    resin_os_version: 2.12.7+rev1.prod
+    body: |-
+      # Tests 
        - ✖ Cellular modem connection
 
 
