--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,33 @@
 results:
   -
-    provision_time: 2m 51s
+    provision_time: null
+    image_size: null
+    resin_os_version: 2.12.7+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device reported hostOS version
+       - ✖ before hook
+
+
+      # Summary
+      - planned: 2
+      - pass: 1
+      - fail: 1
+
+      # Fails
+      ## before hook
+          ✖ before hook
+          {
+              "name": "AssertionError",
+              "message": "Rejected promise returned by test",
+              "values": {
+                  "Rejected promise returned by test. Reason:": "`Permission denied (publickey).␍␊\n`"
+              }
+          }
+    author: null
+    timestamp: 2018-5-31
+    PS_UUID: cfd6c8f0-64dd-11e8-bac3-539c4025b368
+  - provision_time: 2m 51s
     image_size: 1724 Mb
     resin_os_version: 2.12.7+rev1.prod
     body: |-
