--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,26 @@
 results:
   -
+    provision_time: 2m 34s
+    image_size: 1724 Mb
+    resin_os_version: 2.12.7+rev1.prod
     body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Resin host OS update [<%= options.resinOSVersion %> -> <%= options.resinOSVersionUpdate %>]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+
+
+      # Summary
+      - planned: 4
+      - pass: 4
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-5-31
+    PS_UUID: 31548900-64fc-11e8-8e2d-33c843ae022d
+  - body: |-
       # Tests 
        - ✖ Duplicate test title: Device is online
        - ✖ No tests found in lib/main.js
