--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,26 @@
 results:
   -
-    provision_time: 2m 34s
+    provision_time: 3m 0s
+    image_size: 1724 Mb
+    resin_os_version: 2.12.7+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Resin host OS update [2.12.7+rev1.prod -> 2.12.7+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+
+
+      # Summary
+      - planned: 4
+      - pass: 4
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-5-31
+    PS_UUID: 1ef62d30-6502-11e8-a1fd-61c0b191d74c
+  - provision_time: 2m 34s
     image_size: 1724 Mb
     resin_os_version: 2.12.7+rev1.prod
     body: |-
