Edit results using Pensieve

--- a/results.yaml
+++ b/results.yaml
@@ -2,6 +2,33 @@ results:
   -
     body: |-
       # Tests 
+       - ✖ before hook
+       - ✖ 4 tests remaining in lib/main.js
+
+
+      # Summary
+      - planned: 1
+      - pass: 0
+      - fail: 2
+
+      # Fails
+      ## before hook
+          ✖ before hook
+          {
+              "name": "AssertionError",
+              "message": "Rejected promise returned by test",
+              "values": {
+                  "Rejected promise returned by test. Reason:": "ResinRequestError {\n  body: '401',\n  message: 'Request error: 401',\n  name: 'ResinRequestError',\n  requestOptions: {\n    baseUrl: 'https://api.resin.io',\n    body: {\n      appId: 1139728,\n      network: 'ethernet',\n    },\n    headers: {\n      'Accept-Encoding': 'compress, gzip',\n      Authorization: 'Bearer oqj5PQZiiPypDUwpyZ4Qhak2nsrbCDYQ',\n      'Content-Type': 'application/json',\n    },\n    json: true,\n    method: 'POST',\n    refreshToken: true,\n    retries: 0,\n    sendToken: true,\n    strictSSL: true,\n    timeout: 30000,\n    url: '/download-config',\n  },\n  statusCode: 500,\n}"
+              },
+              "at": "node_modules/resin-request/build/request.js:201:17"
+          }
+      ## 4 tests remaining in lib/main.js
+          ✖ 4 tests remaining in lib/main.js
+          undefined
+    timestamp: 2018-6-25
+    PS_UUID: f9fcd3d0-786b-11e8-ad2f-01b8ecc7091f
+  - body: |-
+      # Tests 
        - ✔ Device is online
        - ✔ Resin host OS update [2.12.7+rev1.prod -> 2.12.7+rev1.prod]
        - ✔ Image filename format
