--- a/package.json
+++ b/package.json
@@ -24,17 +24,8 @@
     "url": "https://github.com/resin-io/resinos-tests/issues"
   },
   "homepage": "https://github.com/resin-io/resinos-tests",
-  "ava": {
-    "files": [
-      "lib/main.js"
-    ],
-    "failWithoutAssertions": true,
-    "serial": true,
-    "tap": true
-  },
   "dependencies": {
     "ajv": "^6.5.0",
-    "ava": "^1.0.0-beta.4",
     "bluebird": "^3.5.1",
     "bluebird-retry": "^0.11.0",
     "byline": "^5.0.0",
@@ -47,7 +38,6 @@
     "lodash": "^4.17.10",
     "make-runnable": "^1.3.6",
     "mountutils": "^1.2.0",
-    "node-ipc": "^9.1.1",
     "pensieve-sdk": "^1.0.0",
     "progress-stream": "^2.0.0",
     "randomstring": "^1.1.5",
@@ -59,6 +49,7 @@
     "ssh-keygen": "^0.4.1",
     "string-to-stream": "^1.1.1",
     "symbols": "0.0.6",
+    "tap": "^12.0.1",
     "tap-parser": "^7.0.0"
   },
   "devDependencies": {
