--- a/results.yaml
+++ b/results.yaml
@@ -2,6 +2,22 @@ results:
   -
     body: |-
       # Tests 
+       - ✔ Device is online
+       - ✔ Resin host OS update [2.12.7+rev1.prod -> 2.12.7+rev1.prod]
+       - ✔ Image filename format
+       - ✔ Push a mono-container to the application
+
+
+      # Summary
+      - planned: 4
+      - pass: 4
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-7-3
+    PS_UUID: 97bdafb0-7ec8-11e8-8030-5b38c0f8a162
+  - body: |-
+      # Tests 
        - ✖ before hook
        - ✖ after.always hook
        - ✖ 4 tests remaining in lib/main.js
