--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,23 @@
 results:
   -
+    provision_time: 3m 23s
+    image_size: 1724 Mb
+    resin_os_version: 2.12.7+rev1.prod
     body: |-
+      # Tests 
+       - ✔ Device is online
+
+
+      # Summary
+      - planned: 1
+      - pass: 1
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-7-3
+    PS_UUID: 23b240a0-7f17-11e8-b95a-a5e4d57bbbed
+  - body: |-
       # Tests 
        - ✔ Device is online
        - ✖ Resin host OS update [2.12.7+rev1.prod -> 2.12.7+rev1.prod]
