--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,23 @@
 results:
   -
-    provision_time: 3m 23s
+    provision_time: 2m 59s
+    image_size: 1724 Mb
+    resin_os_version: 2.12.7+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+
+
+      # Summary
+      - planned: 1
+      - pass: 1
+      - fail: 0
+
+      # Fails
+    author: null
+    timestamp: 2018-7-3
+    PS_UUID: f645a730-7f19-11e8-90ac-e32c4a0a79fa
+  - provision_time: 3m 23s
     image_size: 1724 Mb
     resin_os_version: 2.12.7+rev1.prod
     body: |-
