--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-7-4
+    PS_UUID: ed097760-7f72-11e8-aed5-6fd153c8ed6f
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-7-4
     PS_UUID: db3b5c60-7f72-11e8-a0a9-39eb98ccd5c8
   - body: |-
       # Tests 
